Initial express structure

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nameless-warrior-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "devDependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jade": "^1.11.0",
     "mongoose": "^4.5.2"
   }
 }
