--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "jade": "^1.11.0",
+    "jade": "1.7.0",
     "mongoose": "^4.5.2"
   }
 }
