--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
-    "jade": "1.7.0",
     "mongoose": "^4.5.2"
   }
 }
