--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.5.2"
   }
 }
